# Copyright 2024 tison <wander4096@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "cronexpr"

description = "Calculate the next timestamp matching a given crontab pattern."
edition = "2021"
homepage = "https://github.com/tisonkun/cronexpr"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tisonkun/cronexpr"
rust-version = "1.75.0"
version = "0.4.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
jiff = { version = "0.1.13" }
log = { version = "0.4.22" }
thiserror = { version = "1.0.63" }
winnow = { version = "0.6.18" }

[dev-dependencies]
insta = { version = "1.40.0" }
logforth = { version = "0.11.2", features = ["env-filter"] }
